--- a/app/src/main/res/layout/activity_create_carpool.xml
+++ b/app/src/main/res/layout/activity_create_carpool.xml
@@ -22,13 +22,13 @@
         android:id="@+id/editTextPickup"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="84dp"
+        android:layout_marginTop="60dp"
         android:ems="10"
         android:hint="Enter Pickup Location"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/createCarpoolDisplay" />
+        app:layout_constraintTop_toBottomOf="@+id/editTextCarpoolName" />
 
     <EditText
         android:id="@+id/editTextDestination"
@@ -53,4 +53,17 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextDestination"
         app:layout_constraintVertical_bias="0.451" />
+
+    <EditText
+        android:id="@+id/editTextCarpoolName"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="80dp"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:text="Enter Carpool Name"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/createCarpoolDisplay" />
 </androidx.constraintlayout.widget.ConstraintLayout>
