Added the Google Places API functionality, made the landing page look nice by formatting the buttons and text, rounded the fare output to 2 decimal places

--- a/app/src/main/res/layout/activity_landing.xml
+++ b/app/src/main/res/layout/activity_landing.xml
@@ -12,32 +12,41 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="RAMQ"
+        android:textSize="34sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.073" />
+        app:layout_constraintVertical_bias="0.062" />
 
     <TextView
         android:id="@+id/tvLViewAccount"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="110dp"
+        android:layout_height="50dp"
+        android:background="#7E57C2"
+        android:gravity="center"
         android:text="View Account"
+        android:textColor="#FFFFFF"
+        android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.808" />
+        app:layout_constraintVertical_bias="0.826" />
 
     <TextView
         android:id="@+id/tvLCreateCarpool"
-        android:layout_width="98dp"
-        android:layout_height="57dp"
+        android:layout_width="200dp"
+        android:layout_height="50dp"
         android:layout_marginTop="84dp"
+        android:background="#7E57C2"
         android:gravity="center"
         android:text="Create Carpool"
+        android:textColor="#FFFFFF"
+        android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
@@ -45,10 +54,13 @@
 
     <TextView
         android:id="@+id/tvLJoinCarpool"
-        android:layout_width="92dp"
-        android:layout_height="49dp"
+        android:layout_width="200dp"
+        android:layout_height="50dp"
+        android:background="#7E57C2"
         android:gravity="center"
         android:text="Join Carpool"
+        android:textColor="#FFFFFF"
+        android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@+id/tvLScheduleCarpool"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.507"
@@ -58,10 +70,13 @@
 
     <TextView
         android:id="@+id/tvLScheduleCarpool"
-        android:layout_width="129dp"
-        android:layout_height="47dp"
+        android:layout_width="200dp"
+        android:layout_height="50dp"
+        android:background="#7E57C2"
         android:gravity="center"
         android:text="Schedule Carpool"
+        android:textColor="#FFFFFF"
+        android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@+id/tvLViewAccount"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
