--- a/app/src/main/res/layout/activity_create_carpool.xml
+++ b/app/src/main/res/layout/activity_create_carpool.xml
@@ -60,8 +60,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="80dp"
         android:ems="10"
+        android:hint="Enter Carpool Name"
         android:inputType="textPersonName"
-        android:text="Enter Carpool Name"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
